[gd_scene load_steps=4 format=3 uid="uid://cpmgvlpbanclr"]

[ext_resource type="Script" path="res://scenes/Play Area/NoWifi.gd" id="1_khll5"]
[ext_resource type="Texture2D" uid="uid://bh8t6hfhm2ufy" path="res://assets/art/EnemySprites.png" id="2_3ww6l"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pw7vp"]
radius = 20.0
height = 50.0

[node name="NoWifi" type="RigidBody2D"]
collision_layer = 2
gravity_scale = 0.0
script = ExtResource("1_khll5")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.294149, -9.69621)
scale = Vector2(4, 4)
texture = ExtResource("2_3ww6l")
hframes = 4
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.242489, -1.69638)
shape = SubResource("CapsuleShape2D_pw7vp")

[node name="DirectionsTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="timeout" from="DirectionsTimer" to="." method="_on_directions_timer_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
